Icono de la pagina

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Yo te Prestito</title>
+        <link rel="icon" href="jpg/megaman.png">
     </head>
     <body>
         <h1>Yo te prestito...</h1>
