Ajuste a la liga de caliente.mx

--- a/calienteMx.html
+++ b/calienteMx.html
@@ -11,6 +11,6 @@
 <script>
     var cual
     $(document).ready(function(){
-        //window.location="http://caliente.mx"
+        window.location="http://caliente.mx"
     });
 </script>
