--- a/calienteMx.html
+++ b/calienteMx.html
@@ -3,13 +3,12 @@
         <title>Caliente mx</title>
         <link rel="icon" href="ico/theLadyInRed.ico">
     </head>
-    <body>
-        <h1>Caliente mx...</h1>
+    <body style="background: url(png/theLadyInRed.png) center;">
+        <p>...</p>
     </body>
 </html>
 <script src="js/jquery-3.7.1.js"></script>
 <script>
-    var cual
     $(document).ready(function(){
         window.location="http://caliente.mx"
     });
