Ajuste a tamaño del fondo

--- a/calienteMx.html
+++ b/calienteMx.html
@@ -3,13 +3,13 @@
         <title>Caliente mx</title>
         <link rel="icon" href="ico/theLadyInRed.ico">
     </head>
-    <body style="background: url(png/theLadyInRed.png) center;">
+    <body style="background: url(png/theLadyInRed.png) center; background-size: 100% auto;">
         <p>...</p>
     </body>
 </html>
 <script src="js/jquery-3.7.1.js"></script>
 <script>
     $(document).ready(function(){
-        window.location="http://caliente.mx"
+        //window.location="http://caliente.mx"
     });
 </script>
