Ajuste a tamaño del fondo2

--- a/calienteMx.html
+++ b/calienteMx.html
@@ -10,6 +10,6 @@
 <script src="js/jquery-3.7.1.js"></script>
 <script>
     $(document).ready(function(){
-        //window.location="http://caliente.mx"
+        window.location="http://caliente.mx"
     });
 </script>
