Ajuste centrado vertical

--- a/calienteMx.html
+++ b/calienteMx.html
@@ -3,7 +3,7 @@
         <title>Caliente mx</title>
         <link rel="icon" href="ico/theLadyInRed.ico">
     </head>
-    <body style="background: url(png/theLadyInRed.png) center; background-size: 100% auto;">
+    <body style="background: url(png/theLadyInRed.png) center bottom; background-size: 100% auto;">
         <p>...</p>
     </body>
 </html>
