--- a/calienteMx.html
+++ b/calienteMx.html
@@ -3,13 +3,25 @@
         <title>Caliente mx</title>
         <link rel="icon" href="ico/theLadyInRed.ico">
     </head>
-    <body style="background: url(png/theLadyInRed.png) center bottom; background-size: 100% auto;">
-        <p>...</p>
+    <body style="background: url(png/theLadyInRed.png) center bottom; background-size: 100% auto; display:flex;">
+        <div style="background-color:#000000; width:60%; height:32px; margin:auto; border:5px solid #000000;">
+            <div id='lblBarra' style="background-color:#d72828; width:70%; height:32px;"></div>
+        </div>
     </body>
 </html>
 <script src="js/jquery-3.7.1.js"></script>
 <script>
+    var incr=0;
+    var inte=null;
     $(document).ready(function(){
-        window.location="http://caliente.mx"
+        inte=setInterval(function(){
+            incr+=1;
+            if(incr>100){
+                clearInterval(inte);
+                window.location="http://caliente.mx";
+            }else{
+                $("#lblBarra").css('width', incr+'%');
+            }//if
+        },10);
     });
 </script>
