--- a/calienteMx.html
+++ b/calienteMx.html
@@ -7,8 +7,10 @@
         <div style="margin:auto; width:100%; text-align:center;">
             <img src="svg/caliente.svg" style="width:40%; background-color:#000000; border:10px solid #000000;">
             <br><br>
-            <div style="background-color:#000000; width:60%; margin:auto; height:32px; border:5px solid #000000;">
-                <div id='lblBarra' style="background-color:#d72828; width:70%; height:32px;"></div>
+            <div style="width:60%; margin:auto; height:32px; border:5px solid #000000; position: relative;">
+                <div style="width:100%;   background-color:#000000; height:32px; position:absolute; z-index:-2;"></div>
+                <div id='lblBarra' style="background-color:#d72828; height:32px; position:absolute; z-index:-1;"></div>
+                <label id="lblPorc" style="font-family:Arial, Helvetica, sans-serif; font-size:30px; color:white; text-shadow: 3px 3px 5px black;">00.00%</label>
             </div>
             <br><br><br><br><br><br><br><br><br><br>
         </div>
@@ -18,14 +20,21 @@
 <script>
     var incr=0;
     var inte=null;
+    var paso=.2;
     $(window).on("load", function(){
         inte=setInterval(function(){
-            incr+=.2;
+            incr+=paso;
+            if(Math.ceil(incr)%10==0){
+                paso=.2*Math.random();
+            }//if
             if(incr>100){
                 clearInterval(inte);
+                $("#lblPorc").html('100.00%');
                 window.location="http://caliente.mx";
             }else{
-                $("#lblBarra").css('width', incr.toFixed(2)+'%');
+                var porc=incr.toFixed(2);
+                $("#lblBarra").css('width', porc+'%');
+                $("#lblPorc").html(porc+'%');
             }//if
         },10);
     });
