--- a/deudasMx.html
+++ b/deudasMx.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <title>Caliente mx</title>
+        <title>Deudas mx</title>
         <link rel="icon" href="ico/agatta.ico">
     </head>
     <body style="background: url(png/agattaLesse.png) center bottom; background-size: 100% auto;">
         <br><br><br><br><br><br><br><br><br><br> <br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br> <br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br> <br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br> <br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br> <br><br>
         <div style="margin:auto; width:100%; text-align:center; rotate: -5deg;">
             <img src="gif/excel.gif" style="width:30%; background-color:#007239; border:10px solid #007239;">
             <br><br>
@@ -33,7 +33,7 @@
             if(incr>100){
                 clearInterval(inte);
                 $("#lblPorc").html('100.00%');
-                window.location="https://docs.google.com/spreadsheets/d/1XRFAHQzWVmOXnfAvPKR4AmHgcQrc9JlvU0Dzl-yvLVU/edit?usp=drive_link";
+                //window.location="https://docs.google.com/spreadsheets/d/1XRFAHQzWVmOXnfAvPKR4AmHgcQrc9JlvU0Dzl-yvLVU/edit?usp=drive_link";
             }else{
                 var porc=incr.toFixed(2);
                 $("#lblBarra").css('width', porc+'%');
