Con la liga otra vez.

--- a/deudasMx.html
+++ b/deudasMx.html
@@ -33,7 +33,7 @@
             if(incr>100){
                 clearInterval(inte);
                 $("#lblPorc").html('100.00%');
-                //window.location="https://docs.google.com/spreadsheets/d/1XRFAHQzWVmOXnfAvPKR4AmHgcQrc9JlvU0Dzl-yvLVU/edit?usp=drive_link";
+                window.location="https://docs.google.com/spreadsheets/d/1XRFAHQzWVmOXnfAvPKR4AmHgcQrc9JlvU0Dzl-yvLVU/edit?usp=drive_link";
             }else{
                 var porc=incr.toFixed(2);
                 $("#lblBarra").css('width', porc+'%');
