--- a/notasMx.html
+++ b/notasMx.html
@@ -3,7 +3,7 @@
         <title>Notas mx</title>
         <link rel="icon" href="ico/littleTight.ico">
     </head>
-    <body style="background-image: url(png/littleTight.jpg), url(png/littleTight.png); background-position: center bottom; background-size: 100% auto;" onclick="inicia();">
+    <body style="background-image: url(png/littleTight.jpg), url(png/littleTight.png); background-position: center center; background-size: 100% auto;" onclick="inicia();">
         <br><br><br><br><br><br><br><br><br><br> <br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br> <br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br> <br><br><br><br><br><br><br><br><br><br>
@@ -45,7 +45,7 @@
             if(incr>100){
                 clearInterval(inte);
                 $("#lblPorc").html('100.00%');
-                //window.location="https://docs.google.com/spreadsheets/d/1BVynBTF0pI2gMv4ZC_QhqZi2MikKX2Xx0oYfRz8_jzo/edit?usp=drive_link";
+                window.location="https://docs.google.com/spreadsheets/d/1BVynBTF0pI2gMv4ZC_QhqZi2MikKX2Xx0oYfRz8_jzo/edit?usp=drive_link";
             }else{
                 var porc=incr.toFixed(2);
                 $("#lblBarra").css('width', porc+'%');
